--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.0.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "mongoose": "~4.0.2"
   }
 }
