--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~4.0.0",
+    "express-session": "^1.11.1",
     "jade": "~1.3.0",
+    "mongoose": "~4.0.2",
     "morgan": "~1.0.0",
-    "static-favicon": "~1.0.0",
-    "mongoose": "~4.0.2"
+    "parseurl": "^1.3.0",
+    "static-favicon": "~1.0.0"
   }
 }
