--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
   "dependencies": {
     "bcrypt": "^0.8.3",
     "body-parser": "~1.0.0",
+    "compression": "^1.4.4",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "errorhandler": "^1.3.5",
     "express": "~4.0.0",
     "express-session": "^1.11.1",
     "jade": "~1.3.0",
+    "lodash": "^3.8.0",
+    "method-override": "^2.3.3",
     "mongoose": "~4.0.2",
     "morgan": "~1.0.0",
     "parseurl": "^1.3.0",
+    "serve-favicon": "^2.2.0",
     "static-favicon": "~1.0.0"
+  },
+  "devDependencies": {
+    "connect-livereload": "^0.5.3"
   }
 }
