--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^0.8.3",
     "body-parser": "~1.0.0",
+    "composable-middleware": "^0.3.0",
     "compression": "^1.4.4",
     "connect-mongo": "^0.8.1",
     "cookie-parser": "~1.0.1",
@@ -15,6 +16,7 @@
     "ejs": "^2.3.1",
     "errorhandler": "^1.3.5",
     "express": "~4.0.0",
+    "express-jwt": "^3.0.0",
     "express-session": "^1.11.1",
     "jade": "~1.3.0",
     "jsonwebtoken": "^5.0.0",
